--- a/client-development/lab2/table1.htm
+++ b/client-development/lab2/table1.htm
@@ -59,18 +59,6 @@
       <tr>
         <th rowspan="1" height="1px"></th><th rowspan="1" height="1px"></th>
         <th rowspan="1" height="1px"></th>
-      </tr>
-    </table>
-    <table width="60%" align="center">
-      <caption>Table 4</caption>
-      <tr><th colspan="3" width="42%"></th><th colspan="3" width="42%"></th><th colspan="1" width="14%"></th></tr>
-      <tr><th colspan="1" width="14%"></th><th colspan="3" width="42%"></th><th colspan="3" width="42%"></th></tr>
-      <tr><th colspan="2" width="28%"></th><th colspan="3" width="42%"></th><th colspan="2" width="28%"></th></tr>
-      <tr><th colspan="3" width="42%"></th><th colspan="3" width="42%"></th><th colspan="1" width="14%"></th></tr>
-      <tr><th colspan="1" width="14%"></th><th colspan="3" width="42%"></th><th colspan="3" width="42%"></th></tr>
-      <tr><th colspan="2" width="28%"></th><th colspan="3" width="42%"></th><th colspan="2" width="28%"></th></tr>
-      <tr><th colspan="3" width="42%"></th><th colspan="3" width="42%"></th><th colspan="1" width="14%"></th></tr>
-    </table>
-    <p></p>
+wцw
 </body>
 </html>
